Changed and and small css fix for images stretch

--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -344,6 +344,8 @@ section#home{
 .prize-coin{
   width:20vw;
   margin:0 auto;
+  max-height: 300px;
+  max-width: 300px;
 }
 .ten-vim{
   font-size:10vmin;
